--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "module": "ES2020",
-    "target": "ES6",
+    "module": "CommonJS",
+    "target": "ES2020",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
