--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   ],
   "author": "eduardogomesf",
   "devDependencies": {
-    "@types/node": "^22.5.4",
-    "typescript": "^5.5.4"
+    "@types/node": "22.5.4",
+    "typescript": "5.5.4"
+  },
+  "dependencies": {
+    "@google/generative-ai": "0.17.1",
+    "dotenv": "16.4.5"
   }
 }
